tests/Unit/PHPStan/Rules/Fixtures/Naming/TypeSuffixMismatch/Invalid/DenyListRegression/DenyListedConcreteClass.php
<?php

declare(strict_types=1);

namespace TypeSuffixMismatchFixtures\Invalid\DenyListRegression;

final class DenyListedConcreteClass implements DenyListedInterface {}
